RESOLVED FIXED301892
REGRESSION(302456@main) [GCC14] Hasher.h:83:8: error: call of overloaded ‘add(WTF::Hasher&, uint32_t)’ is ambiguous
https://bugs.webkit.org/show_bug.cgi?id=301892
Summary REGRESSION(302456@main) [GCC14] Hasher.h:83:8: error: call of overloaded ‘add...
Fujii Hironori
Reported 2025-11-03 18:00:08 PST
REGRESSION(302456@main) [GCC14] Hasher.h:83:8: error: call of overloaded ‘add(WTF::Hasher&, uint32_t)’ is ambiguous GCC-14 can't compile WebKit. FAILED: [code=1] Source/WTF/wtf/CMakeFiles/WTF.dir/text/TextStream.cpp.o /usr/bin/g++-14 -DBUILDING_WEBKIT=1 -DBUILDING_WITH_CMAKE=1 -DBUILDING_WPE__=1 -DBUILDING_WTF -DBWRAP_EXECUTABLE=\"/usr/bin/bwrap\" -DDBUS_PROXY_EXECUTABLE=\"/usr/bin/xdg-dbus-proxy\" -DGETTEXT_PACKAGE=\"WPE\" -DHAVE_CONFIG_H=1 -DJSC_GLIB_API_ENABLED -DPAS_BMALLOC=1 -DPKGDATADIR=\"/usr/local/share/wpe-webkit-2.0\" -DSTATICALLY_LINKED_WITH_bmalloc -D_GLIBCXX_ASSERTIONS=1 -I/home/fujii/webkit/wb/WebKitBuild/WPE/Release -I/home/fujii/webkit/wb/WebKitBuild/WPE/Release/WTF/DerivedSources -I/home/fujii/webkit/wb/Source/WTF -I/home/fujii/webkit/wb/Source/WTF/wtf -I/home/fujii/webkit/wb/Source/WTF/wtf/dtoa -I/home/fujii/webkit/wb/Source/WTF/wtf/fast_float -I/home/fujii/webkit/wb/Source/WTF/wtf/persistence -I/home/fujii/webkit/wb/Source/WTF/wtf/simdutf -I/home/fujii/webkit/wb/Source/WTF/wtf/text -I/home/fujii/webkit/wb/Source/WTF/wtf/text/icu -I/home/fujii/webkit/wb/Source/WTF/wtf/threads -I/home/fujii/webkit/wb/Source/WTF/wtf/unicode -I/home/fujii/webkit/wb/WebKitBuild/WPE/Release/bmalloc/Headers -isystem /usr/include/glib-2.0 -isystem /usr/lib64/glib-2.0/include -isystem /usr/include/libmount -isystem /usr/include/blkid -isystem /home/fujii/webkit/webkit-jhbuild/install/include/sysprof-6 -fdiagnostics-color=always -Wextra -Wall -pipe -fmax-errors=20 -Wno-odr -Wno-stringop-overread -Wno-stringop-overflow -Wno-nonnull -Wno-array-bounds -Wno-expansion-to-defined -Wno-noexcept-type -Wno-subobject-linkage -Wno-psabi -Wno-misleading-indentation -Wno-maybe-uninitialized -Wundef -Wpointer-arith -Wmissing-format-attribute -Wformat-security -Wcast-align -Wno-tautological-compare -fasynchronous-unwind-tables -fdebug-types-section -fno-omit-frame-pointer -fno-strict-aliasing -fno-exceptions -fno-rtti -fcoroutines -ffunction-sections -fdata-sections -ffile-prefix-map=/home/fujii/webkit/wb=. -O3 -DNDEBUG -std=c++23 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Werror -I/usr/include -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include -DWITH_GZFILEOP -I/usr/include/libmount -I/usr/include/blkid -I/home/fujii/webkit/webkit-jhbuild/install/include/sysprof-6 -pthread -MD -MT Source/WTF/wtf/CMakeFiles/WTF.dir/text/TextStream.cpp.o -MF Source/WTF/wtf/CMakeFiles/WTF.dir/text/TextStream.cpp.o.d -o Source/WTF/wtf/CMakeFiles/WTF.dir/text/TextStream.cpp.o -c /home/fujii/webkit/wb/Source/WTF/wtf/text/TextStream.cpp In file included from /home/fujii/webkit/wb/Source/WTF/wtf/Markable.h:39, from /home/fujii/webkit/wb/Source/WTF/wtf/text/TextStream.h:31, from /home/fujii/webkit/wb/Source/WTF/wtf/text/TextStream.cpp:27: /home/fujii/webkit/wb/Source/WTF/wtf/Hasher.h: In function ‘void WTF::add(Hasher&, UnsignedInteger)’: /home/fujii/webkit/wb/Source/WTF/wtf/Hasher.h:83:8: error: call of overloaded ‘add(WTF::Hasher&, uint32_t)’ is ambiguous 83 | add(hasher, static_cast<uint32_t>(integer)); | ~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /home/fujii/webkit/wb/Source/WTF/wtf/Hasher.h:39:6: note: candidate: ‘void WTF::add(Hasher&, UnsignedInteger) [with UnsignedInteger = unsigned int]’ 39 | void add(Hasher&, UnsignedInteger); | ^~~ /home/fujii/webkit/wb/Source/WTF/wtf/Hasher.h:61:17: note: candidate: ‘void WTF::add(Hasher&, UnsignedInteger) [with UnsignedInteger = unsigned int]’ 61 | friend void add(Hasher& hasher, UnsignedInteger integer) | ^~~ /home/fujii/webkit/wb/Source/WTF/wtf/Hasher.h:84:8: error: call of overloaded ‘add(WTF::Hasher&, uint32_t)’ is ambiguous 84 | add(hasher, static_cast<uint32_t>(integer >> 32)); | ~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /home/fujii/webkit/wb/Source/WTF/wtf/Hasher.h:39:6: note: candidate: ‘void WTF::add(Hasher&, UnsignedInteger) [with UnsignedInteger = unsigned int]’ 39 | void add(Hasher&, UnsignedInteger); | ^~~ /home/fujii/webkit/wb/Source/WTF/wtf/Hasher.h:61:17: note: candidate: ‘void WTF::add(Hasher&, UnsignedInteger) [with UnsignedInteger = unsigned int]’ 61 | friend void add(Hasher& hasher, UnsignedInteger integer) | ^~~
Attachments
repro (705 bytes, text/x-c++src)
2025-11-03 18:00 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2025-11-03 18:00:52 PST
Fujii Hironori
Comment 2 2025-11-03 18:05:52 PST
Fujii Hironori
Comment 3 2025-11-03 19:00:37 PST
EWS
Comment 4 2025-11-03 20:14:43 PST
Committed 302514@main (b99cb96a7a3e): <https://commits.webkit.org/302514@main> Reviewed commits have been landed. Closing PR #53369 and removing active labels.
Radar WebKit Bug Importer
Comment 5 2025-11-03 20:15:14 PST
Note You need to log in before you can comment on or make changes to this bug.