REGRESSION(302456@main) [WTF][GCC14] Hasher.h:83:8: error: call of overloaded ‘add(WTF::Hasher&, uint32_t)’ is ambiguous https://bugs.webkit.org/show_bug.cgi?id=301892

Reviewed by Yusuke Suzuki.

GCC >=14 couldn't compile Hasher.h after 302456@main. This is a GCC bug.
<https://gcc.gnu.org/bugzilla/show_bug.cgi?id=122550>. Moved the definition of
the template friend function to the outside of Hasher class.

* Source/WTF/wtf/Hasher.h:
(WTF::add):
(WTF::Hasher::add): Deleted.

Canonical link: https://commits.webkit.org/302514@main